--- a/package.json
+++ b/package.json
@@ -3,19 +3,16 @@
   "version": "0.0.1",
   "description": "Aragon forwarder for protecting actions with fees",
   "scripts": {
-    "compile": "truffle compile",
+    "compile": "buidler compile --force",
     "build": "",
-    "apm:publish:major": "aragon apm publish major --files public/",
-    "apm:publish:minor": "aragon apm publish minor --files public/",
-    "apm:publish:patch": "aragon apm publish patch --files public/",
+    "publish:major": "buidler publish major",
+    "publish:minor": "buidler publish minor",
+    "publish:patch": "buidler publish patch",
     "lint": "solium --dir ./contracts",
-    "test": "TRUFFLE_TEST=true npm run ganache-cli:test",
-    "test:gas": "GAS_REPORTER=true npm test",
+    "test": "buidler test --network buidlerevm",
+    "test:gas": "REPORT_GAS=true buidler test --network localhost",
     "coverage": "SOLIDITY_COVERAGE=true npm run ganache-cli:test",
-    "ganache-cli:test": "./node_modules/@aragon/test-helpers/ganache-cli.sh",
-    "deploy:local": "aragon run --template TollgateKit --template-init @ARAGON_ENS --reset",
-    "abi:extract": "truffle-extract --output abi/ --keys abi",
-    "prepublishOnly": "truffle compile --all && npm run abi:extract -- --no-compile"
+    "abi:extract": "buidler-extract --output abi/ --keys abi"
   },
   "files": [
     "/abi",
@@ -32,20 +29,26 @@
   "repository": "https://github.com/aragon/aragonOS",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
-    "@aragon/apps-vault": "^4.1.0",
     "@aragon/apps-finance": "^3.0.0",
-    "@aragon/apps-voting": "^2.1.0",
-    "@aragon/apps-token-manager": "^2.1.0",
     "@aragon/apps-shared-migrations": "1.0.0",
     "@aragon/apps-shared-minime": "1.0.0",
+    "@aragon/apps-token-manager": "^2.1.0",
+    "@aragon/apps-vault": "^4.1.0",
+    "@aragon/apps-voting": "^2.1.0",
+    "@aragon/buidler-aragon": "^0.2.9",
     "@aragon/test-helpers": "^2.0.0",
+    "@nomiclabs/buidler": "^1.4.3",
+    "@nomiclabs/buidler-etherscan": "^1.3.3",
+    "@nomiclabs/buidler-ganache": "^1.3.3",
+    "@nomiclabs/buidler-solhint": "^1.3.3",
+    "@nomiclabs/buidler-truffle5": "^1.3.4",
+    "@nomiclabs/buidler-web3": "^1.3.4",
+    "buidler-extract": "^1.0.0",
+    "buidler-gas-reporter": "^0.1.3",
     "coveralls": "^2.13.3",
-    "eth-gas-reporter": "^0.2.0",
-    "ganache-cli": "^6.4.3",
-    "solidity-coverage": "^0.5.11",
-    "solium": "^1.2.3",
-    "truffle": "4.1.14",
-    "truffle-extract": "^1.2.1"
+    "solidity-coverage": "^0.7.9",
+    "solium": "^1.2.5",
+    "web3": "^1.2.11"
   },
   "dependencies": {
     "@aragon/os": "aragon/aragonOS#e45412fbf5f7be257e9b9e3ab215ce8dfa6c9664"
